language/move-lang/tests/move_check/expansion/use_function_same_name_as_struct.move
address 0x2 {
module X {
    public fun u(): u64 {
        0
    }
}

module M {
    use 0x2::X::u;
    struct u {}
}

module N {
    struct Bar {}
    use 0x2::X::u as Bar;
}

}
